# ft_nm-otool

./: .gitignore  CMakeLists.txt  Makefile
ft_nm/: CMakeLists.txt
ft_nm/include/: ft_nm.h  nm.h
ft_nm/src/: error.c  fat.c  file_types_handlers.c  ft_nm.c  macho32.c  macho64.c  main.c  mode.c  nm.c  print.c  sections_index.c  sort.c  utils.c
ft_otool/: CMakeLists.txt
ft_otool/include/: ft_otool.h
ft_otool/src/: error.c  fat.c  file_types_handlers.c  ft_otool.c  macho32.c  macho64.c  main.c  mode.c  print.c  utils.c
